# movoz

.github/workflows/: README.md  infrastructure-cleanup.yml  infrastructure-cost-analysis.yml  infrastructure-deploy.yml
barky-puppies/docs/: user-stories.md
barky-puppies/migrations/: baseline.sql
busy-bee/: README.md
drunken-dolphin/: .gitignore  Cargo.toml  README.md  examples.sh  fitness_data.json  personal_data.json
drunken-dolphin/src/: config.rs  error.rs  fitness.rs  lib.rs  main.rs  personal.rs
drunken-dolphin/src/commands/: mod.rs  pullups.rs  pushups.rs  situps.rs
hustle-turtle/: .gitignore  README.md  go.mod  go.sum  main.go
hustle-turtle/cmd/server/: main.go
hustle-turtle/internal/config/: config.go
hustle-turtle/internal/database/: migrate.go
hustle-turtle/internal/handlers/: health.go
hustle-turtle/internal/models/: user.go
hustle-turtle/migrations/: 000001_create_users_table.up.sql
movoz-infra/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
movoz-infra/scripts/: deploy.sh
